force-app/main/default/objects/Study_Plan__c/fields/Fee_Method__c.field-meta.xml
<CustomField>
    <fullName>Fee_Method__c</fullName>
    <description>Used to define how Students pay for this program</description>
    <inlineHelpText>Used to define how Students pay for this program</inlineHelpText>
    <label>(Obsolete) Fee Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fee_Method</valueSetName>
    </valueSet>
</CustomField>