force-app/main/default/objects/Study_Plan__c/fields/Individual_Enrollment_Creation_Mode__c.field-meta.xml
<CustomField>
    <fullName>Individual_Enrollment_Creation_Mode__c</fullName>
    <description>Determine whether the IPE enrolled in this study plan should create the placeholder Individual Enrollments</description>
    <inlineHelpText>Determine whether the IPE enrolled in this study plan should create the placeholder Individual Enrollments</inlineHelpText>
    <label>Individual Enrollment Creation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Required Units Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>