force-app/main/default/objects/Study_Plan__c/fields/Pay_Upfront__c.field-meta.xml
<CustomField>
    <fullName>Pay_Upfront__c</fullName>
    <description>Identifies if students should pay the full tuition fees upfront</description>
    <inlineHelpText>Identifies if students should pay the full tuition fees upfront</inlineHelpText>
    <label>Pay Upfront</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pay_Upfront</valueSetName>
    </valueSet>
</CustomField>