force-app/main/default/objects/Study_Plan__c/fields/Study_Fee_Config__c.field-meta.xml
<CustomField>
    <fullName>Study_Fee_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The fee configuration and matrix for students enrolling to the study plan.</description>
    <inlineHelpText>The fee configuration and matrix for students enrolling to the study plan.</inlineHelpText>
    <label>Study Fee Config</label>
    <referenceTo>Study_Fee_Config__c</referenceTo>
    <relationshipLabel>Used By Study Plans</relationshipLabel>
    <relationshipName>Used_By_Study_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>