force-app/main/default/objects/Study_Plan__c/fields/Study_Program__c.field-meta.xml
<CustomField>
    <fullName>Study_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Program</label>
    <referenceTo>Study_Program__c</referenceTo>
    <relationshipLabel>Study Plans</relationshipLabel>
    <relationshipName>Study_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>