force-app/main/default/objects/Study_Plan__c/fields/Total_Required_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Required_Credits__c</fullName>
    <description>The total number of credits a student needs to complete to satisfy this study plan.</description>
    <inlineHelpText>The total number of credits a student needs to complete to satisfy this study plan.</inlineHelpText>
    <label>Total Required Credits</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>