force-app/main/default/objects/Study_Plan__c/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <description>The validity of a study plan</description>
    <inlineHelpText>The validity of a study plan</inlineHelpText>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>