force-app/main/default/objects/Study_Plan__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version for the study plan e.g., BIS 2023.</description>
    <inlineHelpText>Version for the study plan e.g., BIS 2023.</inlineHelpText>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>