force-app/main/default/objects/Study_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Study_Program__c</columns>
    <columns>Default__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Required_Credits__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>